force-app/main/default/objects/Twilio_API_Setting__mdt/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Account SID</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>