force-app/main/default/objects/Twilio_API_Setting__mdt/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Auth Token</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>