force-app/main/default/objects/Twilio_API_Setting__mdt/fields/Default_From_Number__c.field-meta.xml
<CustomField>
    <fullName>Default_From_Number__c</fullName>
    <description>Format: +18001112222</description>
    <inlineHelpText>Format: +18001112222</inlineHelpText>
    <label>Default From Number</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>