force-app/main/default/objects/Twilio_API_Setting__mdt/fields/Twilio_API_URL__c.field-meta.xml
<CustomField>
    <fullName>Twilio_API_URL__c</fullName>
    <label>Twilio API URL</label>
    <length>55</length>
    <required>true</required>
    <type>Text</type>
</CustomField>